--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     height: 100%;
-    background: rgb(210, 227, 243);
+    background: rgb(238, 247, 235);
 }
 
 .logo {
@@ -30,5 +30,60 @@ nav a {
     list-style: none;
     text-decoration: none;
     align-items: center;
-    color: rgb(149, 116, 202);
+    color: rgb(20, 109, 75);
+}
+
+.hero-section {
+    background-image: url(/assets/images/icecreamcones.jpg);
+    background-size: cover;
+    height: 80vh;
+    display: flex;
+}
+
+h1 {
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 100px;
+    left: 50%;
+    color: rgba(158, 211, 166, 0.945);
+    font-family: 'Roboto', sans-serif;
+    font-size: 80px;
+    font-weight: bold;
+}
+
+h2 {
+    color: rgb(20, 109, 75);
+    font-family: 'Kalam', cursive;
+    font-size: 15px;
+    margin-left: 20px;
+    font-size: 1.25rem;
+    line-height: 1.5
+}
+
+div.gallery a {
+    display: flex;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    list-style: none;
+    color: rgb(87, 42, 6);
+    padding-bottom: 100px;
+}
+
+div h3 {
+    display: flex;
+    background-color: whitesmoke;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: rgb(61, 151, 96);
+    padding: 5px;
+    border-radius: 50px;
+}
+
+footer {
+    justify-content: space-between;
+    color: rgb(164, 243, 174);
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 20px;
+    margin: 0;
 }
