--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ nav a {
     background-size: cover;
     height: 80vh;
     display: flex;
+    flex-wrap: wrap;
 }
 
 h1 {
@@ -45,10 +46,21 @@ h1 {
     padding-top: 200px;
     padding-bottom: 100px;
     left: 50%;
-    color: rgba(158, 211, 166, 0.945);
-    font-family: 'Roboto', sans-serif;
+    color: rgb(20, 109, 75);
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 80px;
     font-weight: bold;
+    margin-top: 200px;
+    margin-left: 90px;
+    margin-bottom: 200px;
+    background-color: hsla(0, 100%, 100%, 0.3);
+    border-radius: 80px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 h2 {
