--- a/style.css
+++ b/style.css
@@ -69,21 +69,26 @@ h2 {
     font-size: 15px;
     margin-left: 20px;
     font-size: 1.25rem;
-    line-height: 1.5
+    line-height: 1.5;
+    margin-top: 90px;
+    margin-bottom: 90px;
 }
 
 div.gallery a {
     display: flex;
+    justify-content: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
     list-style: none;
     color: rgb(87, 42, 6);
     padding-bottom: 100px;
+    text-align: center;
 }
 
 div h3 {
     display: flex;
-    background-color: whitesmoke;
+    justify-content: center;
+    background-color: rgb(227, 245, 234);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
     color: rgb(61, 151, 96);
@@ -93,7 +98,8 @@ div h3 {
 
 footer {
     justify-content: space-between;
-    color: rgb(164, 243, 174);
+    font-family: 'Kalam', cursive;
+    color: rgb(5, 49, 11);
     text-align: center;
     padding-top: 100px;
     padding-bottom: 20px;
