--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1 {
     padding-top: 200px;
     padding-bottom: 100px;
     left: 50%;
-    color: rgb(20, 109, 75);
+    color: rgb(4, 73, 47);
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 80px;
     font-weight: bold;
@@ -55,7 +55,7 @@ h1 {
     margin-bottom: 200px;
     background-color: hsla(0, 100%, 100%, 0.3);
     border-radius: 80px;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 10px;
     width: 80%;
     display: flex;
@@ -64,7 +64,7 @@ h1 {
 }
 
 h2 {
-    color: rgb(20, 109, 75);
+    color: rgb(8, 80, 52);
     font-family: 'Kalam', cursive;
     font-size: 15px;
     margin-left: 20px;
@@ -78,28 +78,52 @@ div.gallery a {
     display: flex;
     justify-content: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
+    font-size: 30px;
     list-style: none;
     color: rgb(87, 42, 6);
-    padding-bottom: 100px;
+    padding-top: 60px;
+    padding-bottom: 2px;
     text-align: center;
+}
+
+div p {
+    display: flex;
+    justify-content: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
+    list-style: none;
+    color: rgb(3, 41, 2);
+    padding-bottom: 90px;
 }
 
 div h3 {
     display: flex;
     justify-content: center;
-    background-color: rgb(227, 245, 234);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    color: rgb(61, 151, 96);
+    color: rgb(87, 42, 6);
     padding: 5px;
     border-radius: 50px;
+}
+
+article p {
+    display: flex;
+    justify-content: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    list-style: none;
+    color: rgb(3, 41, 2);
+    padding-bottom: 90px;
+}
+
+form {
+    color: rgb(20, 109, 75);
 }
 
 footer {
     justify-content: space-between;
     font-family: 'Kalam', cursive;
-    color: rgb(5, 49, 11);
+    color: rgb(4, 73, 47);
     text-align: center;
     padding-top: 100px;
     padding-bottom: 20px;
